--- a/src/components/home.css
+++ b/src/components/home.css
@@ -65,12 +65,6 @@
     right: 0;
 }
 
-.carousel-inner-data{
-        width: 100%;
-        height: 100%;
-      
-  }
-
-.carousel-control .glyphicon-chevron-left, .carousel-control .icon-prev {
-left: 0;
+.col-sm-4, .col-sm-8 {
+    width: 50%;
 }
